--- a/online_quiz/index.html
+++ b/online_quiz/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Конструктор квизов</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
 </head>
 <body>
-Привет
+<div class="quiz" id="quiz">
+    <div class="quiz-questions" id="quiz-questions"></div>
+    <div class=" indicator" id="quiz-indicator"></div>
+    <div class="quiz-results" id="quiz-results"></div>
+    <div class="quiz-controls">
+        <button type="button" class="btn btn-primary btn-lg btn-block btn-next" id="btn-next">Далее</button>
+        <button type="button" class="btn btn-secondary btn-lg btn-block btn-restart" id="btn-restart">пройти тест заново</button>
+
+    </div>
+
+</div>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
